# Hack-Agent-Repo-IT

./: .gitignore  README.md  docker-compose.yml  main.py  next.config.ts  package-lock.json  package.json  plan.md  pyproject.toml  server.py
analysis_folder/: misc.txt
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/learn/: page.tsx
backend/: README.md  config.py  gemini_service.py  github_api_readme.md  github_learning_path_generator.py  github_service.py  main.py  onboarding_agent.py  package-lock.json  package.json  progress_tracker.py  requirements.txt  run_app.sh  run_progress_tracker.sh  run_project.sh  run_simple_form.sh  simple_form.py  simplified_github.py  test_github_api.py
backend/agents/: agents.py  custom_tools.py
backend/api/: main.py
backend/public/: index.html  manifest.json
backend/services/: memory_service.py  rag_service.py
backend/src/: App.css  App.tsx  index.css
backend/static/: style.css
backend/templates/: form.html  progress_tracker.html  simple_form.html
code-kg/: kg-builder.py
components/: email-template.tsx  two-factor-mail.tsx
components/auth/: provider-login.tsx
components/chatbot/: ai-agent-chatbot.tsx
components/dashboard/: code-health.tsx  commit-analytics.tsx  knowledge-discovery.tsx  (+3 more)
db/: chroma.sqlite3
scripts/: fix_google_cloud_setup.py  ingest_repo.py  manage_vector_search.py  migrate_memory_service.py  migrate_to_google_vector_search.py  setup_google_vector_search.py
server/: auth.ts
trials/: README.md  demo_rag.py  demo_rag_agents.py  rag_agents.py  rag_component_example.py  requirements.txt
types/: next-auth.d.ts
(+38 files in other folders)
