[project]
name = "hack-agent-repo-it"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.52.0",
    "crewai>=0.121.0",
    "crewai-tools>=0.45.0",
    "openai>=1.0.0",
    "qdrant-client>=1.7.0",
    "gitpython>=3.1.0",
    "neo4j>=5.0.0",
    "pinecone>=7.0.1",
    "weaviate-client>=4.14.4",
    "fastapi>=0.115.9",
]
